[workspace]
members = [".", "pii_filter"]
resolver = "2"

[workspace.package]
version = "1.0.0-RC-1"
edition = "2024"
authors = ["ContextForge Contributors"]
license = "Apache-2.0"
repository = "https://github.com/IBM/mcp-context-forge"

[workspace.dependencies]
pyo3 = { version = "0.28", features = ["abi3-py311"] }

[package]
name = "plugins_rust"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "High-performance Rust implementations of ContextForge plugins"

[lib]
name = "plugins_rust"
crate-type = ["rlib"]

[dependencies]
pyo3.workspace = true
pii_filter = { path = "pii_filter" }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
