[package]
name = "encoded_exfil_detection"
version = "1.0.0-RC-1"
edition = "2024"
authors = ["ContextForge Contributors"]
license = "Apache-2.0"
repository = "https://github.com/IBM/mcp-context-forge"
description = "Rust acceleration for encoded exfiltration detection plugin"

[lib]
name = "encoded_exfil_detection_rust"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "stub_gen"
path = "src/bin/stub_gen.rs"

[dependencies]
pyo3 = { version = "0.28.2", features = ["abi3-py311"] }
pyo3-stub-gen = "0.19"
regex = "1.12"
base64 = "0.22"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"
debug = true

[[bench]]
name = "encoded_exfil_detection"
harness = false
