[package]
name = "pii_filter"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "High-performance PII detection and masking library"

[lib]
name = "pii_filter_rust"
crate-type = ["rlib"]

[dependencies]
pyo3.workspace = true
regex = "1.12"
once_cell = "1.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
sha2 = "0.10"
uuid = { version = "1.18", features = ["v4"] }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "pii_filter"
harness = false
