[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "mcpgateway-pii-filter"
version = "1.0.0-RC-2"
description = "High-performance PII detection and masking library for MCP Gateway"
authors = [{ name = "ContextForge Contributors" }]
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.maturin]
module-name = "pii_filter_rust"
python-source = "python"
features = ["pyo3/extension-module"]
