[package]
name = "rate_limiter"
version = "0.1.0"
edition = "2024"
authors = ["ContextForge Contributors"]
license = "Apache-2.0"
repository = "https://github.com/IBM/mcp-context-forge"
description = "High-performance rate limiter engine for MCP Gateway"

[lib]
name = "rate_limiter_rust"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "stub_gen"
path = "src/bin/stub_gen.rs"

[dependencies]
pyo3 = { version = "0.28.2", features = ["abi3-py311"] }
pyo3-async-runtimes = { version = "0.28", features = ["tokio-runtime"] }
pyo3-stub-gen = "0.19"
pyo3-log = "0.13"
log = "0.4"
parking_lot = "0.12"
thiserror = "2.0"
redis = { version = "0.27", features = ["aio", "tokio-comp"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "rate_limiter"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"
debug = true
