[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "mcpgateway-rate-limiter"
version = "0.1.0"
description = "High-performance rate limiter engine for MCP Gateway"
authors = [{ name = "ContextForge Contributors" }]
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.maturin]
module-name = "rate_limiter_rust"
python-source = "python"
features = ["pyo3/extension-module"]
